--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body{
 }
 
 .menu{
-    background-color: rgba(0, 0, 0, 0.24);
+    background-color:rgb(0, 51, 77);
     display: flex;
     justify-content:space-around;
     align-items: center;
@@ -30,7 +30,7 @@ body{
 
 .menu ul li a{
     text-decoration: none;
-    color: black;
+    color: white;
     font-size: 16PX;
 }
 
@@ -67,6 +67,76 @@ body{
 
 .menu label:hover{
     cursor: pointer ;
-    background: white
+    background: white;
     transition: all 0.4s;
 }
+
+
+.mas_leido {
+    display: inline-block;
+    background-color: orangered;
+    width: 20%;
+    height: 70%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    border-radius: 4px;
+    text-align: center;
+    float: right;
+    margin-right: 10px;
+    border-bottom: 20px solid orangered;
+    
+}
+.mas_leido h2 { 
+    color: white;
+    padding: 15px;
+
+}
+
+.mas_leido p {
+    color: black;
+    padding: 15px;
+}
+
+.sub {
+    font-size: small;
+    background-color: slategrey;
+    color: white;
+    margin: 5px;
+    border-radius: 5px;
+}
+
+.sub p {
+    color: white;
+    font-weight: bolder;
+}
+
+.iniciar_sesion {
+    background-color: silver;
+    margin: 0px 0px 0px 25px;
+    padding: 5px;
+    width: 80%;
+    border-radius: 5px;
+    margin: 7.7%;
+}
+
+.iniciar_sesion input {
+    border-radius: 5px;
+    outline: none;
+    border: 2px solid white;
+    width: 90%;
+    margin: 5px 0px 5px 0px;
+}
+
+#button {
+    background: rgb(0, 51, 77);
+    color: white;
+    font-size: 15px;
+    font-weight: bolder;
+    border-radius: 10px;
+    width: 60%;
+    padding: 5px;
+    margin: 5px 0px 0px 0px;
+    cursor: pointer;
+}
+
