--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
-body{
+*{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+   
     background-color: rgba(250, 248, 248, 0.336);
     font-family: 'Roboto', sans-serif;
 }
@@ -69,14 +74,31 @@ i{
     margin-top: 12px;
 }
 
-.mas_leido {
+.contenedor{
     display: flex;
-    flex-flow: column;
+    flex-flow: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    background-color: #f2f2f2;
+    width: 1640px;
+    height: 2376px;
+    margin: 20px auto;
+    text-align: justify;
+  
+}
+
+.noticia{
+    background-color: white;
+    margin: 20px;
+    width: 70%;
+    padding: 15px;
+}
+
+.mas_leido {
+    width: 100%;
     align-items: center;
     justify-content:space-around;
     background-color: orangered;
-    width: 20%;
-    height: 70%;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 10px;
