--- a/styles.css
+++ b/styles.css
@@ -74,31 +74,33 @@ i{
     margin-top: 12px;
 }
 
-.contenedor{
+.padre1{
     display: flex;
-    flex-flow: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    background-color: #f2f2f2;
-    width: 1640px;
-    height: 2376px;
-    margin: 20px auto;
-    text-align: justify;
-  
-}
-
-.noticia{
-    background-color: white;
-    margin: 20px;
-    width: 70%;
-    padding: 15px;
-}
-
-.mas_leido {
-    width: 100%;
+    flex-flow:row wrap;
+    justify-content: space-around;
     align-items: center;
-    justify-content:space-around;
+    padding: 15px;
+    width: 70%;
+    margin: 20px;
+    background-color: #C5C3C6;
+}
+
+
+.hijo{
+    background-color: white;
+    margin: 30px;
+    width:300px;
+    padding: 30px;
+    text-align: center;
+}
+.mas_leido {
+    display: flex;
+    flex-flow:column wrap;
+    align-items: center;
+    justify-content:space-between;
     background-color: orangered;
+    width: 20%;
+    height: 50%;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 10px;
