--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,18 @@
-body{
-    margin: 0;
+*{
     padding: 0;
-    background-color: rgba(250, 248, 248, 0.336);
-    font-family: 'Roboto', sans-serif;
+    margin: 0;
 }
-
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+}
 .menu{
-    background-color:rgb(0, 51, 77);
+    background-color:#032A35;
     display: flex;
     justify-content:space-around;
     align-items: center;
-
-
-    
+    height:80px;
+    width: 100%;
 }
 
 .menu ul{
@@ -22,16 +22,14 @@ body{
 }
 .menu ul li{
     display: inline-block;
-    margin: 18px;
+    margin: 30px;
     font-weight: bold;
-    
-
 }
 
 .menu ul li a{
     text-decoration: none;
     color: white;
-    font-size: 16PX;
+    font-size: 20PX;
 }
 
 .busqueda{
@@ -42,14 +40,11 @@ body{
 
 
 .busqueda input{
-    width: 150px;
+    width: 200px;
     font-size: 14px;
     outline: none;
     border: 2px solid silver;
     border-radius: 5px;
-
-
-
 }
 
 #botonmenu{
@@ -69,73 +64,98 @@ i{
     margin-top: 12px;
 }
 
-.mas_leido {
+.contenedor-principal{
+    display: flex;
+    flex-flow:row;
+    justify-content: space-between;
+    align-items:flex-start;
+    background: #f1eef3;
+    max-width: 1200px;
+    margin: 20px auto;
+}
+
+.hijo{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px;
+    padding: 20px;
+}
+
+.hijo2{
+    margin: 15px;
+    border: 2px solid black;
+    width: 600px;
+    padding: 15px;
+    background: white;
+    text-align: center;
+}
+.hijo2 p{
+    text-align: justify;
+}
+
+.lo-mas-leido{
     display: flex;
     flex-flow: column;
+    justify-content:center;
     align-items: center;
-    justify-content:space-around;
-    background-color: orangered;
-    width: 20%;
-    height: 70%;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    border-radius: 4px;
+    background: #D74E09;
+    width: 30%;
+    padding: 20px;
+    margin: 50px;
     text-align: center;
-    margin-right: 10px;
-    border-bottom: 20px solid orangered;
-    
 }
-.mas_leido h2 { 
+
+h2{
+    margin-bottom: 20px;
     color: white;
-    padding: 15px;
-
+    font-size: 25px;
 }
-
-.mas_leido p {
-    color: black;
-    padding: 15px;
+h3{
+    font-size: 20px;
+    color: #032A35;
+    margin-bottom: 20px;
 }
-
-.sub {
-    font-size: small;
-    background-color: slategrey;
+.hijo3 img{
+    margin: 15px;
+}
+.hijo3 p{
+    text-align: justify;
+    margin-bottom: 20px;
+}
+.boton{
+    background: #424C55 ;
+    padding: 10px 15px;
     color: white;
-    margin: 5px;
-    border-radius: 5px;
+    text-decoration: none;
+    margin-top: 20px;
+    font-size: 12px;
 }
-
-.sub p {
+.boton-enviar{
+    background: #424C55 ;
     color: white;
-    font-weight: bolder;
-}
-
-.iniciar_sesion {
-    background-color: silver;
-    margin: 0px 0px 0px 25px;
-    padding: 5px;
-    width: 80%;
-    border-radius: 5px;
-    margin: 7.7%;
-}
-
-.iniciar_sesion input {
-    border-radius: 5px;
-    outline: none;
-    border: 2px solid white;
-    width: 90%;
-    margin: 5px 0px 5px 0px;
-}
-
-#button {
-    background: rgb(0, 51, 77);
-    color: white;
-    font-size: 15px;
-    font-weight: bolder;
+    padding:25px 40px;
     border-radius: 10px;
-    width: 60%;
-    padding: 5px;
-    margin: 5px 0px 0px 0px;
     cursor: pointer;
+    margin: 20px;
 }
-
+.suscribete{
+    font-size: 15px;
+    background: #424C55;
+    color: white;
+    padding: 10px;
+    margin-top: 150px;
+    text-align: center;
+}
+.formulario{
+    background:  #C5C3C6;
+    padding: 15px;
+    margin-top: 25px;
+    margin-bottom: 30px;
+}
+.formulario input{
+    margin: 10px;
+    width: 80%;
+    padding: 5px;
+}
