--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
+}
 
 .menu{
     background-color:#032A35;
@@ -73,6 +74,7 @@ i{
     background: #f1eef3;
     max-width: 1200px;
     margin: 20px auto;
+}
 
 .hijo{
     display: flex;
