--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,17 @@ i{
     margin-top: 12px;
 }
 
+.logo_noticias {
+    display: flex;
+    flex-direction: row;
+}
+
+.logo_noticias h1 {
+    color:black;
+    font-weight: bolder;
+    padding: 1.6cm 0cm 0cm .4cm;
+    
+}
 
 .contenedor-principal{
     display: flex;
