--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body{
     font-size: 20PX;
 }
 
+
 .busqueda{
     position: absolute;
     display: contents;
@@ -76,9 +77,18 @@ i{
     color:black;
     font-weight: bolder;
     padding: 1.6cm 0cm 0cm .4cm;
+    font-size: 40PX;
+
     
 }
 
+.logo_noticias span{
+    font-weight: bold;
+}
+
+,.logo_noticias img{
+    
+}
 .contenedor-principal{
     display: flex;
     flex-flow:row;
@@ -87,6 +97,7 @@ i{
     background: #f1eef3;
     max-width: 1200px;
     margin: 20px auto;
+    box-shadow: 10px 5px 5px black;
 }
 
 .hijo{
