--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ body{
     font-size: 15px;
 }
 
+/*---------- menú---------- */
+
 .menu{
     background-color:#032A35;
     display: flex;
@@ -65,6 +67,8 @@ i{
     margin-top: 12px;
 }
 
+/*---------- Encabezado--------- */
+
 .logo_noticias {
     display: flex;
     flex-direction: row;
@@ -78,6 +82,8 @@ i{
     padding: 1.6cm 0cm 0cm .4cm;
     
 }
+
+/* --------Main-sección noticias----- */
 
 .contenedor-principal{
     display: flex;
@@ -111,6 +117,8 @@ i{
     padding: 10px;
     margin: 10px;
 }
+
+/*--------- Aside-Lo mas leido--------- */
 
 .lo-mas-leido{
     display: flex;
@@ -178,6 +186,8 @@ h3{
     background:#71818f;
     color:black;
 }
+
+
 .suscribete{
     font-size: 15px;
     background: #D74E09 ;
@@ -201,6 +211,8 @@ h3{
     border: 0px;
     border-radius: 5px;
 }
+
+/*--------- Publicidad---------- */
 
 .publicidad{
     display:flex;
