--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ i{
     background: #f1eef3;
     max-width: 1200px;
     margin: 20px auto;
-    box-shadow: 10px 5px 5px black;
+  
 }
 
 .hijo{
@@ -135,6 +135,9 @@ i{
     padding:30px;
     margin: 50px;
     text-align: center;
+    margin: 20px auto;
+    margin-right: 20px;
+    box-shadow: -10px -5px 6px rgb(150, 148, 148);
 }
 
 h2{
