--- a/styles.css
+++ b/styles.css
@@ -234,9 +234,10 @@ h3 {
   border: 1px solid black;
 }
 footer {
-  background-color: #032a35;
+  background-color: #71818f;
   color: #f1eef3;
-  flex-wrap: wrap;
+  
+  j
 }
 footer .barra-footer {
   background-color: #424c55;
@@ -246,6 +247,14 @@ footer .barra-footer {
   padding-top: 15px;
   padding-bottom: 15px;
 }
-.columna {
-  width: 25%;
+.columna2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  
+}
+.columna3
+{
+  display: flex; 
 }
