--- a/styles.css
+++ b/styles.css
@@ -234,10 +234,8 @@ h3 {
   border: 1px solid black;
 }
 footer {
-  background-color: #71818f;
+  background-color: #032a35;
   color: #f1eef3;
-  
-  j
 }
 footer .barra-footer {
   background-color: #424c55;
@@ -247,14 +245,38 @@ footer .barra-footer {
   padding-top: 15px;
   padding-bottom: 15px;
 }
-.columna2 {
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  
-  
+  align-items: flex-end;
+  flex-direction: row;
+  padding: 15px;
 }
-.columna3
-{
-  display: flex; 
+.columna1 {
+  padding: 10px;
+  margin: 10px;
+}
+.columna2 {
+  padding: 10px;
+  margin: 10px;
+}
+.columna3 {
+  padding: 10px;
+  margin: 10px;
+}
+.columna4 {
+  padding: 10px;
+  margin: 10px;
+}
+footer ul {
+  padding: 5px;
+  list-style: none;
+}
+footer ul li {
+  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-left: auto;
+  padding: 5px;
+}
+footer .container ul li a {
+  color: #f1eef3;
 }
