--- a/tecnologia.css
+++ b/tecnologia.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 15px;
 }
 
@@ -34,6 +34,9 @@ body{
     color: white;
     font-size: 20PX;
 }
+.menu ul li a span{
+    color:#FCAA06;
+}
 
 
 .busqueda{
@@ -48,8 +51,12 @@ body{
     outline: none;
     border: 2px solid silver;
     border-radius: 5px;
- 
 }
+.busqueda input{
+    font-family: FontAwesome, "open Sans", Verdana, Geneva, Tahoma, sans-serif;
+    padding: 5px;
+  
+  }
 
 
 
@@ -71,20 +78,192 @@ i{
 }
 
 /*---------- Encabezado--------- */
-.logo_noticias span{
-    font-weight: bold;
-}
+
 .logo_noticias {
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: center;
     margin-left: 80px;
     margin-top: 20px;
 }
 
-.logo_noticias h1 {
+.logo_noticias h3{
     color:black;
     font-weight: bolder;
-    padding: 1.6cm 0cm 0cm .4cm;
-    font-size: 40px;
-    
+    font-size: 20px;
+    border-bottom: 2px solid #D74E09;
 }
+
+.subtitulo a {
+    text-decoration: none;
+    color: black;
+}
+
+.subtitulo span{
+    color: #D74E09;
+    margin-left: 35px;
+}
+
+/* ---------------Noticias---------------- */
+.noticias{
+   margin: 20px;
+   padding: 20px;
+
+}
+h1{
+    text-align: center;
+    font-size: 50px;
+}
+.noticias p{
+    text-align: justify;
+    font-size: 20px;
+    font-weight: 300;
+    margin-bottom: 40px;
+    margin: 20px auto;
+}
+.noticia-tecnologia img{
+    margin-left: 150px;
+}
+.noticia-tecnologia h4{
+    margin-left: 150px;
+    margin-bottom: 40px;
+}
+.noticia-tecnologia h4 span{
+    font-weight: 400;
+
+}
+
+
+
+/* <!------------ redes flotantes ---------------> */
+.sticky-container{
+    padding:0px;
+    margin:0px;
+    position:fixed;
+    right:-130px;
+    top:230px;
+    width:180px;
+    z-index: 1100;
+}
+.sticky li{
+    list-style-type:none;
+    background-color:white;
+    color:#efefef;
+    height:40px;
+    padding:0px;
+    margin:0px 0px 1px 0px;
+    -webkit-transition:all 0.25s ease-in-out;
+    -moz-transition:all 0.25s ease-in-out;
+    -o-transition:all 0.25s ease-in-out;
+    transition:all 0.25s ease-in-out;
+    cursor:pointer;
+}
+.sticky li:hover{
+    margin-left:-20px;
+}
+
+.sticky li{
+    padding-top:5px;
+    margin:0px;
+    line-height:16px;
+    font-size:11px;
+}
+.sticky li a{
+    text-decoration:none;
+
+}
+
+.fa-facebook{
+    font-size: 40px;
+    color:#3b5998;
+}
+
+.fa-twitter-square{
+    font-size: 40px;
+    color: #1da1f2;
+}
+
+.fa-google{
+    font-size: 40px;
+    color: #ea4335;
+}
+
+.fa-youtube-square{
+    font-size: 40px;
+    color: #ff0000;
+}
+
+/* -----------publicidad-------------- */
+
+.publicidad {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+    align-items: flex-end;
+    margin: 20px auto;
+    margin-right:36px;
+    margin-left: 37px;
+  }
+  
+  .publicidad img {
+    width: 220px;
+    height: 130px;
+    margin: 20px auto;
+  }
+
+  /* -------------------Footer--------------- */
+.contenedor-footer{
+    background: #c5c3c6;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  
+  .logo img{
+    width: 300px;
+    margin-top: 20px;
+  }
+  .contactos{
+    margin-left:-80px;
+  }
+  
+  h3{
+    margin-top: 30px;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  
+  .contactos h3{
+    text-align: center;
+    color: #032a35;
+    border-bottom: 2px solid  #239cb8 ;
+  }
+  
+  .redes{
+    margin-right: 150px;
+  }
+  
+  .redes h3{
+    color: #032a35;
+    border-bottom: 2px solid  #239cb8 ;
+  }
+  
+  .redes i{
+    font-size:40px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  
+  .redes .fab.fa-facebook-f{
+    color: #3b5998;
+  
+  }
+  .redes .fab.fa-youtube{
+    color: #ff0000;
+  
+  }
+  .redes .fab.fa-twitter{
+    color: #1da1f2;
+  }
