--- a/Recreacion.css
+++ b/Recreacion.css
@@ -123,7 +123,7 @@ i{
     justify-content: center;
     align-items: flex-start;
     background: #f2f2f2;
-    max-width: 1200px;
+    max-width: 1350px;
     margin: 20px auto;
     padding: 20px;
   }
@@ -238,6 +238,151 @@ h1{
    
 }
 
+.segunda{
+    float: right;
+}
+.img{
+    position: relative;
+    display: inline-block;
+}
+.pie-de-foto1{
+    position: absolute;
+    margin-left: 150px;
+    margin-top: 15px;
+    font-style: italic;
+    font-weight: 400;
+}
+
+/*---------Más Noticias--------- */
+.contenedor-mas-noticias h3{
+    text-align: center;
+    border-bottom: 2px solid #239cb8;
+}
+.noticias h2{
+    text-align: center;
+    margin-bottom: 70px;
+}
+.mas-noticias{
+   display: flex;
+   flex-flow: row wrap;
+   justify-content: space-between;
+   align-items:center;
+   width: 100%x;
+}
+.mas-noticias img{
+    width: 300px;
+    height: 180px;
+}
+.noticia a{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+    font-size: 13px;
+    margin-bottom: 50px;
+}
+h3{
+    border-bottom: 2px solid #239cb8;
+    margin-bottom: 20px;
+    font-size: 25px;
+    text-align: center;
+}
+.noticia1 img{
+    margin-left: -10px;
+}
+.noticia2 img{
+    margin-left: 20px;
+}
+.noticia1{
+    padding: 10px;
+}
+.noticia2{
+    padding: 10px;
+}
+
+.noticia3{
+    padding: 10px;
+}
+.noticia3 img{
+    margin-left: 50px;
+}
+
+.noticia1 a:hover{
+    text-decoration: underline;
+}
+.noticia2 a:hover{
+    text-decoration: underline;
+}
+.noticia3 a:hover{
+    text-decoration: underline;
+} 
+.video-aside{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+/*-------------------- Formulario---------------- */
+.contenedor-formulario{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items:center;
+}
+.contenedor-formulario img{
+    width: 400px;
+    height: 200px;
+}
+.opinion{
+    font-size: 14px;
+    background: #032a35;
+    border-radius: 10px;
+    color: white;
+    padding: 10px;
+    margin-top: 80px;
+    text-align: center;
+    width: 18%;
+    margin-left: 48px;
+  }
+  .formulario {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: flex-start;
+    background: #c5c3c6;
+    margin-top: 25px;
+    border-radius: 10px;
+    padding: 30px;
+  }
+  .formulario input{
+    margin: 10px;
+    padding: 5px;
+    border: 0px;
+    border-radius: 5px;
+    width: 90%;
+  }
+  .formulario .mensaje{
+      border-radius: 5px;
+      border: 0px;
+      font-family: 'Roboto';
+      padding: 10px;
+      margin-left: 10px;
+  }
+  .boton-enviar {
+    background: #424c55;
+    color: white;
+    padding: 25px 40px;
+    border-radius: 10px;
+    cursor: pointer;
+    border: 0px;
+  }
+  .boton-enviar:hover {
+    background: #71818f;
+    color: white;
+  }
 /* -----------publicidad-------------- */
 
 .publicidad {
@@ -370,3 +515,23 @@ h1{
   .redes .fab.fa-twitter{
     color: #1da1f2;
   }
+
+  .btn-inicio{
+    padding:0px;
+    right:-75px;
+    /* left: -40px; */
+    position:fixed;
+    top:410px;
+    width:180px;
+    z-index: 1100;
+}
+.btn-inicio a img{
+    list-style-type:none;
+    padding:0px;
+    margin:0px 0px 1px 0px;
+    -webkit-transition:all 0.25s ease-in-out;
+    -moz-transition:all 0.25s ease-in-out;
+    -o-transition:all 0.25s ease-in-out;
+    transition:all 0.25s ease-in-out;
+    cursor:pointer;
+}
