--- a/Recreacion.css
+++ b/Recreacion.css
@@ -4,10 +4,10 @@
 }
 body{
     font-family: 'Roboto', sans-serif;
-    font-size: 15px;
+    font-size: 16px;
 }
 
-/*-----menú-----*/
+/*---------- menú---------- */
 
 .menu{
     background-color:#032A35;
@@ -33,29 +33,28 @@ body{
     text-decoration: none;
     color: white;
     font-size: 20PX;
-    padding: 15px 15px;
 }
 .menu ul li a span{
     color:#FCAA06;
-    padding: 15px 15px;
 }
-
-.menu ul li a:hover {
-    background-color: #FCAA06;
-    border-radius: 10px;
-    color:white;
-}
-
-.menu ul li a span:hover {
-    color:white;
-}
-
-.busqueda{
+.busqueda {
+    display: flex;
+    flex-flow: row;
+    justify-content: flex-start;
     position: absolute;
-    display: contents;
+    margin-left: -250px;
     padding: 5px;
-}
-
+  }
+  .busqueda .lupa{
+    background: #D74E09;
+    width: 35px;
+    border-radius: 5px;
+  }
+  .fa-search{
+    font-size: 20px;
+    color: white;
+    padding: 5px;
+  }
 .busqueda input{
     width: 200px;
     font-size: 14px;
@@ -68,13 +67,10 @@ body{
     padding: 5px;
   
   }
-
-
 #botonmenu{
     display: none;
     padding: 0;
 }
-
 i{
     color: white;
     font-size: 30px;
@@ -238,19 +234,27 @@ h1{
    
 }
 
-.segunda{
-    float: right;
-}
 .img{
     position: relative;
     display: inline-block;
 }
+
+.segunda{
+    float: left;
+    width:700;
+}
+
 .pie-de-foto1{
     position: absolute;
     margin-left: 150px;
     margin-top: 15px;
     font-style: italic;
     font-weight: 400;
+}
+
+.pie-de-foto2{
+    margin-left: 150px; 
+    margin-bottom: 45px; 
 }
 
 /*---------Más Noticias--------- */
@@ -290,7 +294,7 @@ h3{
     text-align: center;
 }
 .noticia1 img{
-    margin-left: -10px;
+    margin-left: 15px;
 }
 .noticia2 img{
     margin-left: 20px;
@@ -300,6 +304,7 @@ h3{
 }
 .noticia2{
     padding: 10px;
+;
 }
 
 .noticia3{
