--- a/deportes.css
+++ b/deportes.css
@@ -39,9 +39,24 @@ body{
 }
 
 
-.busqueda{
+.busqueda {
+    display: flex;
+    flex-flow: row;
+    justify-content: flex-start;
     position: absolute;
-    display: contents;
+    margin-left: -250px;
+    padding: 5px;
+}
+
+.busqueda .lupa{
+    background: #D74E09;
+    width: 35px;
+    border-radius: 5px;
+}
+
+.fa-search{
+    font-size: 20px;
+    color: white;
     padding: 5px;
 }
 
@@ -52,6 +67,7 @@ body{
     border: 2px solid silver;
     border-radius: 5px;
 }
+
 .busqueda input{
     font-family: FontAwesome, "open Sans", Verdana, Geneva, Tahoma, sans-serif;
     padding: 5px;
@@ -84,6 +100,7 @@ i{
     margin-left: 80px;
     margin-top: 20px; 
 }
+
 
 .logo_noticias h3{
     color:black;
